--- a/src/View/MenuPrincipal.form
+++ b/src/View/MenuPrincipal.form
@@ -298,15 +298,205 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <EmptySpace min="0" pref="687" max="32767" attributes="0"/>
+                  <Group type="102" alignment="1" attributes="0">
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="jSeparator2" alignment="0" max="32767" attributes="0"/>
+                          <Group type="102" alignment="1" attributes="0">
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="nombreLocutorLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="IdLocutorLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="correoLocutorLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="telefonoLocutorLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="direccionLocutorLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="sexoLocutorLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="fechaLocutorLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <EmptySpace max="32767" attributes="0"/>
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                  <Component id="locutorNombreInput" max="32767" attributes="0"/>
+                                  <Component id="locutorIdInput" max="32767" attributes="0"/>
+                                  <Component id="locutorCorreoInput" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="locutorTelefonoInput" max="32767" attributes="0"/>
+                                  <Component id="locutorDireccionInput" max="32767" attributes="0"/>
+                                  <Component id="locutorSexoInput" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="locutorFechaInput" pref="362" max="32767" attributes="0"/>
+                              </Group>
+                          </Group>
+                          <Group type="102" attributes="0">
+                              <Component id="nuevoLocutorLabel" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                          </Group>
+                          <Component id="botonAgregarLocutor" pref="433" max="32767" attributes="0"/>
+                      </Group>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="listaLocutoresLabel" min="-2" max="-2" attributes="0"/>
+                          <Component id="jScrollPane1" min="-2" pref="228" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace max="-2" attributes="0"/>
+                  </Group>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <EmptySpace min="0" pref="435" max="32767" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="nuevoLocutorLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="listaLocutoresLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="1" attributes="0">
+                          <Group type="102" attributes="0">
+                              <Component id="jSeparator2" min="-2" pref="10" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="2" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="3" attributes="0">
+                                  <Component id="nombreLocutorLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="locutorNombreInput" alignment="3" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="3" attributes="0">
+                                  <Component id="IdLocutorLabel" alignment="3" min="-2" pref="14" max="-2" attributes="0"/>
+                                  <Component id="locutorIdInput" alignment="3" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="3" attributes="0">
+                                  <Component id="correoLocutorLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="locutorCorreoInput" alignment="3" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="3" attributes="0">
+                                  <Component id="telefonoLocutorLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="locutorTelefonoInput" alignment="3" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="3" attributes="0">
+                                  <Component id="direccionLocutorLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="locutorDireccionInput" alignment="3" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="3" attributes="0">
+                                  <Component id="sexoLocutorLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="locutorSexoInput" alignment="3" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="3" attributes="0">
+                                  <Component id="fechaLocutorLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="locutorFechaInput" alignment="3" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                              <Component id="botonAgregarLocutor" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Component id="jScrollPane1" min="-2" pref="257" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace pref="147" max="32767" attributes="0"/>
+                  </Group>
               </Group>
             </DimensionLayout>
           </Layout>
+          <SubComponents>
+            <Container class="javax.swing.JScrollPane" name="jScrollPane1">
+              <AuxValues>
+                <AuxValue name="autoScrollPane" type="java.lang.Boolean" value="true"/>
+              </AuxValues>
+
+              <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
+              <SubComponents>
+                <Component class="javax.swing.JList" name="listaLocutoresBox">
+                  <Properties>
+                    <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
+                      <StringArray count="5">
+                        <StringItem index="0" value="Item 1"/>
+                        <StringItem index="1" value="Item 2"/>
+                        <StringItem index="2" value="Item 3"/>
+                        <StringItem index="3" value="Item 4"/>
+                        <StringItem index="4" value="Item 5"/>
+                      </StringArray>
+                    </Property>
+                  </Properties>
+                  <AuxValues>
+                    <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+                  </AuxValues>
+                </Component>
+              </SubComponents>
+            </Container>
+            <Component class="javax.swing.JLabel" name="nuevoLocutorLabel">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Agregar Nuevo Locutor"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JLabel" name="listaLocutoresLabel">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Lista de locutores:"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JLabel" name="IdLocutorLabel">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Id:"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JLabel" name="nombreLocutorLabel">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Nombre:"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JLabel" name="correoLocutorLabel">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Correo:"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JLabel" name="telefonoLocutorLabel">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Telefono:"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JLabel" name="direccionLocutorLabel">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Direcci&#xf3;n:"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JLabel" name="sexoLocutorLabel">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Sexo:"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JLabel" name="fechaLocutorLabel">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Fecha:"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JSeparator" name="jSeparator2">
+            </Component>
+            <Component class="javax.swing.JTextField" name="locutorNombreInput">
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="locutorNombreInputActionPerformed"/>
+              </Events>
+            </Component>
+            <Component class="javax.swing.JTextField" name="locutorIdInput">
+            </Component>
+            <Component class="javax.swing.JTextField" name="locutorCorreoInput">
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="locutorCorreoInputActionPerformed"/>
+              </Events>
+            </Component>
+            <Component class="javax.swing.JTextField" name="locutorTelefonoInput">
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="locutorTelefonoInputActionPerformed"/>
+              </Events>
+            </Component>
+            <Component class="javax.swing.JTextField" name="locutorDireccionInput">
+            </Component>
+            <Component class="javax.swing.JTextField" name="locutorSexoInput">
+            </Component>
+            <Component class="javax.swing.JTextField" name="locutorFechaInput">
+            </Component>
+            <Component class="javax.swing.JButton" name="botonAgregarLocutor">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Agregar Nuevo Locutor"/>
+              </Properties>
+            </Component>
+          </SubComponents>
         </Container>
       </SubComponents>
     </Container>
