--- a/src/View/MenuPrincipal.form
+++ b/src/View/MenuPrincipal.form
@@ -386,7 +386,7 @@
                                   <Component id="locutorFechaInput" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
-                              <Component id="botonAgregarLocutor" min="-2" max="-2" attributes="0"/>
+                              <Component id="botonAgregarLocutor" min="-2" pref="23" max="-2" attributes="0"/>
                           </Group>
                           <Component id="jScrollPane1" min="-2" pref="257" max="-2" attributes="0"/>
                       </Group>
@@ -495,6 +495,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Agregar Nuevo Locutor"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botonAgregarLocutorActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
