--- a/src/View/MenuPrincipal.form
+++ b/src/View/MenuPrincipal.form
@@ -298,41 +298,55 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="1" attributes="0">
+                  <Group type="102" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jSeparator2" alignment="0" max="32767" attributes="0"/>
-                          <Group type="102" alignment="1" attributes="0">
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="nombreLocutorLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="IdLocutorLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="correoLocutorLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="telefonoLocutorLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="direccionLocutorLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="sexoLocutorLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="fechaLocutorLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                              </Group>
-                              <EmptySpace max="32767" attributes="0"/>
-                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                  <Component id="locutorNombreInput" max="32767" attributes="0"/>
-                                  <Component id="locutorIdInput" max="32767" attributes="0"/>
-                                  <Component id="locutorCorreoInput" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="locutorTelefonoInput" max="32767" attributes="0"/>
-                                  <Component id="locutorDireccionInput" max="32767" attributes="0"/>
-                                  <Component id="locutorSexoInput" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="locutorFechaInput" pref="362" max="32767" attributes="0"/>
-                              </Group>
-                          </Group>
                           <Group type="102" attributes="0">
-                              <Component id="nuevoLocutorLabel" min="-2" max="-2" attributes="0"/>
+                              <Component id="actualizarLocutorLabel" min="-2" max="-2" attributes="0"/>
                               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           </Group>
-                          <Component id="botonAgregarLocutor" pref="421" max="32767" attributes="0"/>
-                      </Group>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="listaLocutoresLabel" min="-2" max="-2" attributes="0"/>
-                          <Component id="jScrollPane1" min="-2" pref="228" max="-2" attributes="0"/>
+                          <Group type="102" alignment="1" attributes="0">
+                              <Group type="103" groupAlignment="1" attributes="0">
+                                  <Component id="jSeparator8" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="jSeparator2" alignment="0" max="32767" attributes="0"/>
+                                  <Group type="102" alignment="1" attributes="0">
+                                      <Group type="103" groupAlignment="0" attributes="0">
+                                          <Component id="nombreLocutorLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                          <Component id="IdLocutorLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                          <Component id="correoLocutorLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                          <Component id="telefonoLocutorLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                          <Component id="direccionLocutorLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                          <Component id="sexoLocutorLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                          <Component id="fechaLocutorLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                      </Group>
+                                      <EmptySpace max="32767" attributes="0"/>
+                                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                          <Component id="locutorNombreInput" max="32767" attributes="0"/>
+                                          <Component id="locutorIdInput" max="32767" attributes="0"/>
+                                          <Component id="locutorCorreoInput" alignment="0" max="32767" attributes="0"/>
+                                          <Component id="locutorTelefonoInput" max="32767" attributes="0"/>
+                                          <Component id="locutorDireccionInput" max="32767" attributes="0"/>
+                                          <Component id="locutorSexoInput" alignment="0" max="32767" attributes="0"/>
+                                          <Component id="locutorFechaInput" pref="362" max="32767" attributes="0"/>
+                                      </Group>
+                                  </Group>
+                                  <Component id="botonAgregarLocutor" alignment="0" pref="421" max="32767" attributes="0"/>
+                                  <Group type="102" alignment="0" attributes="0">
+                                      <Component id="nuevoLocutorLabel" min="-2" max="-2" attributes="0"/>
+                                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                                  </Group>
+                                  <Group type="102" alignment="0" attributes="0">
+                                      <Component id="locutoresActualizarCombo" min="-2" pref="235" max="-2" attributes="0"/>
+                                      <EmptySpace max="32767" attributes="0"/>
+                                      <Component id="botonVerInfoLocutor" min="-2" pref="142" max="-2" attributes="0"/>
+                                  </Group>
+                              </Group>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="listaLocutoresLabel" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jScrollPane1" min="-2" pref="228" max="-2" attributes="0"/>
+                              </Group>
+                          </Group>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
@@ -390,7 +404,16 @@
                           </Group>
                           <Component id="jScrollPane1" min="-2" pref="257" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="155" max="32767" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Component id="actualizarLocutorLabel" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="jSeparator8" min="-2" pref="11" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="locutoresActualizarCombo" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="botonVerInfoLocutor" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace pref="77" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -491,6 +514,32 @@
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botonAgregarLocutorActionPerformed"/>
+              </Events>
+            </Component>
+            <Component class="javax.swing.JLabel" name="actualizarLocutorLabel">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Actualizar Locutor:"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JSeparator" name="jSeparator8">
+            </Component>
+            <Component class="javax.swing.JComboBox" name="locutoresActualizarCombo">
+              <Properties>
+                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                  <Connection code="this.locutoresComboBoxModel" type="code"/>
+                </Property>
+              </Properties>
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+              </AuxValues>
+            </Component>
+            <Component class="javax.swing.JButton" name="botonVerInfoLocutor">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Ver Informaci&#xf3;n"/>
+              </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="botonVerInfoLocutorMouseClicked"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botonVerInfoLocutorActionPerformed"/>
               </Events>
             </Component>
           </SubComponents>
