--- a/src/View/MenuPrincipal.form
+++ b/src/View/MenuPrincipal.form
@@ -875,9 +875,9 @@
                           <Component id="actualizarCancionArchivoComboBox" min="-2" pref="32" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="verInformacionCancionArchivoBtn" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="cargarCancionesArchivoBtn" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="verInformacionCancionArchivoBtn" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace pref="48" max="32767" attributes="0"/>
                   </Group>
@@ -958,6 +958,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Ver Informacion"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="verInformacionCancionArchivoBtnActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="agregarCancionArchivoBtn">
               <Properties>
